--- a/TelaCadastro/TelaCadastro.html
+++ b/TelaCadastro/TelaCadastro.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <header>
+    <a href="../PaginaInicial/PaginaInicial.html"><img src="../Imagens/1.png" alt="Logo da Cash Control" height="70px"></a>
+  </header>
   <div class="container">
     <form class="cadastro">
       <h2>FAZER CADASTRO</h2>
