--- a/TelaLogin/TelaLogin.html
+++ b/TelaLogin/TelaLogin.html
@@ -10,6 +10,9 @@
 </head>
 
 <body>
+  <header>
+    <a href="../PaginaInicial/PaginaInicial.html"><img src="../Imagens/1.png" alt="Logo da Cash Control" height="70px"></a>
+  </header>
   <div class="container">
     <form class="login">
       <h2>FAZER LOGIN</h2>
@@ -21,11 +24,11 @@
       <input type="password" id="senha" name="senha" required>
 
       <button onclick="validateForm()">ENTRAR</button>
-     
+
       <p>AINDA NÃO POSSUI CADASTRO?</p>
-      <p id="cadastre-se">CADASTRE-SE</p>
+      <a href="../TelaCadastro/TelaCadastro.html"><p id="cadastre-se">CADASTRE-SE</p></a>
     </form>
-    
+
   </div>
 </body>
 
