--- a/TelaCadastro/TelaCadastro.html
+++ b/TelaCadastro/TelaCadastro.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cadastro</title>
+  <link rel="shortcut icon" href="../Logos/2-cortada.png" type="image/x-icon" />
   <link rel="stylesheet" href="TelaCadastro.css">
   <script src="TelaCadastro.js"></script>
 </head>
@@ -13,6 +14,7 @@
   <header>
     <a href="../PaginaInicial/PaginaInicial.html"><img src="../Imagens/1.png" alt="Logo da Cash Control" height="70px"></a>
   </header>
+  
   <div class="container">
     <form class="cadastro">
       <h2>FAZER CADASTRO</h2>
