--- a/TelaLogin/TelaLogin.html
+++ b/TelaLogin/TelaLogin.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  <link rel="shortcut icon" href="../Logos/2-cortada.png" type="image/x-icon" />
   <link rel="stylesheet" href="TelaLogin.css">
   <script src="TelaLogin.js"></script>
 </head>
