responsividade das paginas prontas ok

--- a/TelaCadastro/TelaCadastro.html
+++ b/TelaCadastro/TelaCadastro.html
@@ -45,6 +45,9 @@
     </form>
   </div>
 
+  <footer id='rodape'>
+    <h5 id='frase-impacto'>CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE!
+  </footer>
 </body>
 
 </html>
