--- a/TelaLogin/TelaLogin.html
+++ b/TelaLogin/TelaLogin.html
@@ -12,9 +12,10 @@
 
 <body>
   <header>
-    <a href="../PaginaInicial/PaginaInicial.html"><img src="../Imagens/1.png" alt="Logo da Cash Control" height="70px"></a>
+    <a href="../PaginaInicial/PaginaInicial.html"><img src="../Imagens/1.png" alt="Logo da Cash Control"
+        height="70px"></a>
   </header>
-  <div class="container">
+  <div class="container-card-login">
     <form class="login">
       <h2>FAZER LOGIN</h2>
 
@@ -27,10 +28,15 @@
       <button onclick="validateForm()">ENTRAR</button>
 
       <p>AINDA NÃO POSSUI CADASTRO?</p>
-      <a href="../TelaCadastro/TelaCadastro.html"><p id="cadastre-se">CADASTRE-SE</p></a>
+      <a href="../TelaCadastro/TelaCadastro.html">
+        <p id="cadastre-se">CADASTRE-SE</p>
+      </a>
     </form>
-
   </div>
+
+      <footer id='rodape'>
+        <h5 id='frase-impacto'>CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE!
+      </footer>
 </body>
 
 </html>
