--- a/TelaCadastro/TelaCadastro.html
+++ b/TelaCadastro/TelaCadastro.html
@@ -33,7 +33,7 @@
       <input type="tel" id="cpf" name="cpf" maxlength="14" oninput="validarCpf(this)" required>
 
       <label for="data">DATA DE NASCIMENTO</label>
-      <input type="date" id="data" name="data" max="2006-01-01" required>
+      <input type="date" id="data" name="data" required>
 
       <label for="senha">SENHA</label>
       <input type="password" id="senha" name="senha"required>
