--- a/CadastroItens/CadastroItens.html
+++ b/CadastroItens/CadastroItens.html
@@ -9,10 +9,14 @@
     <link rel="stylesheet" href="CadastroItens.css">
 </head>
 <body>
-    
+
   <main>
       <!--CRIANDO O MENU LATERAL (ADICIONAR NOME DO USUÁRIO)-->
-      <div class="menuLateral">
+      <header>
+      <div class="menu-toggle">
+        <button id="botao-abrir-menu">&#9776;</button>
+      </div>
+      <div class="menuLateral" id="menuLateral">
         <img src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px">
         <p> Olá, usuário </p>
         <ul class="list-group list-group-flush">
@@ -43,6 +47,7 @@
           <li class="list-group-item"><a href="../Outros/Outros.html"> + </a></li>
         </ul>
       </div>
+    </header>
 
       
       <!--CRIANDO O CARD DE CADASTRO-->
