--- a/TelaCadastro/TelaCadastro.html
+++ b/TelaCadastro/TelaCadastro.html
@@ -22,7 +22,7 @@
       <label for="nome">NOME COMPLETO</label>
       <input type="text" id="nome" name="nome" required>
 
-      <label for="email">EMAIL</label>
+      <label for="email">E-MAIL</label>
       <input type="email" id="email" name="email" required>
 
       <label for="celular">TELEFONE</label>
