--- a/CadastroItens/CadastroItens.html
+++ b/CadastroItens/CadastroItens.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../Logos/2-cortada.png" type="image/x-icon" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="CadastroItens.css">
+    <script src="CadastroItens.js"></script>
 </head>
 <body>
 
@@ -15,7 +16,7 @@
       <nav>
         <div class="corMenu">
           <div class="menu-toggle">
-            <img src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px">
+            <img class="menu-toggle-img" src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 60px">
             <button id="botao-abrir-menu">&#9776;</button>
           </div>
         </div>
@@ -79,7 +80,7 @@
   <!--RODAPÉ-->
   <footer id='rodape' class="text-center text-lg-start">
     <div class="container p-1">
-      <div class="row align-items-center"> 
+      <div id='rodape-conteudo' class="row align-items-center"> 
         <div class="col-lg-4 mb-md-0">
             <a href="../index.html"><img src="../Imagens/1.png" alt="logo Cash Control" style="height: 100px; margin-left: -40px;"></a>
         </div>
@@ -91,5 +92,7 @@
     </div>
   </footer>
 
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
