--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -139,17 +139,16 @@
     <!--RODAPÉ-->
     <footer id='rodape' class="text-center text-lg-start">
         <div class="container p-1">
-            <div class="row align-items-center">
-                <div class="col-lg-4 mb-md-0">
-                    <a href="../index.html"><img src="../Imagens/1.png" alt="logo Cash Control"
-                            style="height: 100px; margin-left: -40px;"></a>
-                </div>
-                <div class="col-lg-8 col-md-12 mb-md-0 text-center">
-                    <h5 id='frase-impacto' class="text-uppercase mb-1 mt-3">CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ
-                        MERECE!</h5>
-                    <button id='botao-atendimento' type="button" class="btn mt-3 mb-3">CENTRAL DE ATENDIMENTO</button>
-                </div>
+        <div id='rodape-conteudo' class="row align-items-center"> 
+            <div class="col-lg-4 mb-md-0">
+                <a href="../PaginaPrincipal/PaginaPrincipal.html"><img src="../Imagens/1.png" alt="logo Cash Control" style="height: 100px; margin-left: -40px;"></a>
             </div>
+            <div class="col-lg-8 col-md-12 mb-md-0 text-center"> 
+            <h5 id='frase-impacto' class="text-uppercase mb-1 mt-3">CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE!</h5>
+            <button id='botao-atendimento' type="button" class="btn mt-3 mb-3">
+                <a href="mailto:atendimentocashcontrol@outlook.com.br" target="_blank"> CENTRAL DE ATENDIMENTO </a></button>
+            </div>
+        </div>
         </div>
     </footer>
 
@@ -158,5 +157,4 @@
         crossorigin="anonymous"></script>
 
 </body>
-
 </html>
