--- a/PaginaInicial/PaginaInicial.html
+++ b/PaginaInicial/PaginaInicial.html
@@ -102,7 +102,7 @@
                         <input id="input-email" type="text" name="text" class="form-control me-2"
                             placeholder="Digite seu e-mail">
                         <button id="botao-inscreva-se" class="btn btn-default"
-                            onclick="validateEmail()">INSCREVA-SE</button>
+                            onclick="validarCadastro()">INSCREVA-SE</button>
                     </form>
                 </div>
             </div>
