--- a/TelaLogin/TelaLogin.html
+++ b/TelaLogin/TelaLogin.html
@@ -25,7 +25,7 @@
       <label for="senha">SENHA</label>
       <input type="password" id="senha" name="senha" required>
 
-      <button onclick="validateForm()">ENTRAR</button>
+      <button onclick="validarLogin()">ENTRAR</button>
 
       <p>AINDA NÃO POSSUI CADASTRO?</p>
       <a href="../TelaCadastro/TelaCadastro.html">
