arrumando sidebar movimentacao e linha entre merc e morad

--- a/PaginaPrincipal/PaginaPrincipal.html
+++ b/PaginaPrincipal/PaginaPrincipal.html
@@ -69,6 +69,7 @@
                       </ul>
                   </div>
       
+                  <li class="list-group-item separator" style="margin-top: -22px;"></li>
                   <li class="list-group-item"><a href="../CadastroItens/Moradia.html"> Moradia </a></li>
                   <li class="list-group-item"><a href="../CadastroItens/PoupançaInvestimento.html"> Poupança e Investimento </a></li>
                   <li class="list-group-item"><a href="../CadastroItens/Saude.html"> Saúde </a></li>
