was-validated funcionando corretamente

--- a/TelaCadastro/TelaCadastro.html
+++ b/TelaCadastro/TelaCadastro.html
@@ -23,7 +23,7 @@
       <h2>FAZER CADASTRO</h2>
 
       
-      <form class="was-validated">
+      <form id="cadastroForm" novalidate>
         <div>
           <label for="nome">NOME COMPLETO</label>
           <input type="text" id="nome" class="form-control" name="nome" required>
@@ -40,7 +40,7 @@
 
         <div>
           <label for="celular">TELEFONE</label>
-          <input type="tel" id="celular" class="form-control" name="celular" maxlength="14" oninput="validarTelefone(this)"
+          <input type="tel" id="celular" class="form-control" name="celular" maxlength="14" oninput="formatarTelefone(this)"
             placeholder="(__) _____-____" required>
           <div class="valid-feedback"></div>
           <div class="invalid-feedback">Preencha o campo.</div>
@@ -48,9 +48,9 @@
 
         <div>
           <label for="cpf">CPF</label>
-          <input type="tel" id="cpf" class="form-control" name="cpf" maxlength="14" oninput="validarCpf(this)" required>
+          <input type="tel" id="cpf" class="form-control" name="cpf" maxlength="14" oninput="formatarCpf(this)" required>
           <div class="valid-feedback"></div>
-          <div class="invalid-feedback">Preencha o campo.</div>
+          <div class="invalid-feedback" id="cpf-feedback">Preencha o campo.</div>
         </div>
 
         <div>
@@ -65,18 +65,18 @@
           <label for="senha">SENHA</label>
           <input type="password" id="senha" class="form-control" name="senha" required>
           <div class="valid-feedback"></div>
-          <div class="invalid-feedback">Preencha o campo.</div>
+          <div class="invalid-feedback" id="senha-feedback" >Preencha o campo.</div>
         </div>
 
         <div>
           <label for="confirmar-senha">CONFIRMAÇÃO DE SENHA</label>
           <input type="password" id="confirmar-senha" class="form-control" name="confirmar-senha" required>
           <div class="valid-feedback"></div>
-          <div class="invalid-feedback">Preencha o campo.</div>
+          <div class="invalid-feedback" id="confirmar-senha-feedback">As senhas nao coincidem.</div>
         </div>
 
         
-        <button onclick="validarCadastro()" id="botao">CADASTRAR</button>
+        <button type="button" onclick="validarCadastro()" id="botao">CADASTRAR</button>
       </form>
 
     </div>
