--- a/TelaLogin/TelaLogin.html
+++ b/TelaLogin/TelaLogin.html
@@ -21,7 +21,7 @@
     <div class="login">
       <h2>FAZER LOGIN</h2>
 
-      <form class="was-validated">
+      <form id="cadastroForm" novalidate>
         <div>
         <label for="email">E-MAIL</label>
         <input type="email" id="email" class="form-control" name="email" required>
@@ -36,7 +36,7 @@
         <div class="invalid-feedback">Preencha o campo.</div>
       </div>
 
-        <button id="botao" onclick="validarLogin()">ENTRAR</button>
+        <button type="button" id="botao" onclick="validarLogin()">ENTRAR</button>
 
         <p>AINDA NÃO POSSUI CADASTRO?</p>
         <a href="../TelaCadastro/TelaCadastro.html">
