--- a/PaginaInicial/PaginaInicial.html
+++ b/PaginaInicial/PaginaInicial.html
@@ -44,28 +44,28 @@
                     <div class="card">
                         <img src="../Imagens/fotoAlana.jpg" class="card-img-top" alt="foto Alana">
                         <p class="cardText"> Alana Cristina Andreazza </p>
-                        <button class="contactButton"><a href="" target="_blank"
+                        <button class="contactButton"><a href="https://www.linkedin.com/in/alanaandreazza/ " target="_blank"
                                 class="contactLink">Linkedin</a></button>
                     </div>
 
                     <div class="card">
                         <img src="../Imagens/fotoFelipeG.jpg" class="card-img-top" alt="foto FelipeG">
                         <p class="cardText"> Felipe Gabriel Cizanosky </p>
-                        <button class="contactButton"><a href="" target="_blank"
+                        <button class="contactButton"><a href="https://www.linkedin.com/in/cizanosky/" target="_blank"
                                 class="contactLink">Linkedin</a></button>
                     </div>
 
                     <div class="card">
                         <img src="../Imagens/fotoFelipeH.jpg" class="card-img-top" alt="foto FelipeH">
                         <p class="cardText"> Felipe Haweroth dos Santos </p>
-                        <button class="contactButton"><a href="" target="_blank"
+                        <button class="contactButton"><a href="https://www.linkedin.com/in/felipe-haweroth-2922782b3" target="_blank"
                                 class="contactLink">Linkedin</a></button>
                     </div>
 
                     <div class="card">
                         <img src="../Imagens/fotoGabriel.jpg" class="card-img-top" alt="foto Gabriel">
                         <p class="cardText"> Gabriel Moretti Canterle </p>
-                        <button class="contactButton"><a href="" target="_blank"
+                        <button class="contactButton"><a href="https://www.linkedin.com/in/gabrielmcanterle/" target="_blank"
                                 class="contactLink">Linkedin</a></button>
                     </div>
 
@@ -73,7 +73,7 @@
                         <img src="../Imagens/fotoLeticia.jpg" class="card-img-top" alt="foto Leticia">
                         <p class="cardText"> Letícia Fruet </p>
                         <button class="contactButton"><a
-                                href="https://www.linkedin.com/in/let%C3%ADcia-fruet-9165b0288/" target="_blank"
+                                href="https://www.linkedin.com/in/leticia-fruet" target="_blank"
                                 class="contactLink">Linkedin</a></button>
                     </div>
                 </div>
