ajeitando pagina dos itens cadastrados e botao ok

--- a/PaginaPrincipal/PaginaPrincipal.html
+++ b/PaginaPrincipal/PaginaPrincipal.html
@@ -29,7 +29,7 @@
                             <div class="dropdown">
                             <li class="list-group-item"><a> Mercado </a></li>
                                 <ul class="dropdown-menu">
-                                <li class="list-group-item"><a href="Alimentos.html"> Alimentos </a></li>
+                                <li class="list-group-item"><a href="../CadastroItens/Alimentos.html"> Alimentos </a></li>
                                 <li class="list-group-item"><a href="../CadastroItens/Bebidas.html"> Bebidas </a></li>
                                 <li class="list-group-item"><a href="../CadastroItens/Higiene.html"> Higiene </a></li>
                                 <li class="list-group-item"><a href="../CadastroItens/Limpeza.html"> Limpeza </a></li>
@@ -61,7 +61,7 @@
                   <div class="dropdown">
                     <li class="list-group-item"><a> Mercado </a></li>
                       <ul class="dropdown-menu">
-                        <li class="list-group-item"><a href="Alimentos.html"> Alimentos </a></li>
+                        <li class="list-group-item"><a href="../CadastroItens/Alimentos.html"> Alimentos </a></li>
                         <li class="list-group-item"><a href="../CadastroItens/Bebidas.html"> Bebidas </a></li>
                         <li class="list-group-item"><a href="../CadastroItens/Higiene.html"> Higiene </a></li>
                         <li class="list-group-item"><a href="../CadastroItens/Limpeza.html"> Limpeza </a></li>
