--- a/PaginaInicial/PaginaInicial.html
+++ b/PaginaInicial/PaginaInicial.html
@@ -107,7 +107,7 @@
                         <div class="inner">
                         <img src="../Imagens/fotoLeticia.jpg" class="card-img-top" alt="foto FelipeH">
                         <div class="overlay-icon">
-                        <a href="www.linkedin.com/in/felipe-haweroth-2922782b3" target="_blank">
+                        <a href="https://www.linkedin.com/in/felipe-haweroth-2922782b3" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32"
                                 fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                                 <path
