--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -112,7 +112,7 @@
                     <h2>CUIDADOS PESSOAIS</h2>
 
                     <div class="form-group row mb-3">
-                        <div class="col-sm-6">
+                        <div id='coluna-produto' class="col-sm-6">
                             <label for="produto" class="col-form-label">PRODUTO</label>
                             <input type="text" class="form-control" id="produto" name="produto" disabled>
                             <input type="text" class="form-control" id="produto" name="produto" disabled>
@@ -124,7 +124,7 @@
                             <input type="text" class="form-control" id="produto" name="produto" disabled>
                         </div>
 
-                        <div class="col-sm-3">
+                        <div id='coluna-data' class="col-sm-3">
                             <label for="data" class="col-form-label">DATA</label>
                             <input type="text" class="form-control" id="data" name="data" disabled>
                             <input type="text" class="form-control" id="data" name="data" disabled>
