login e cadastro ok

--- a/TelaLogin/TelaLogin.html
+++ b/TelaLogin/TelaLogin.html
@@ -39,7 +39,7 @@
         <button type="button" id="botao" onclick="validarLogin()">ENTRAR</button>
 
         <p>AINDA NÃO POSSUI CADASTRO?</p>
-        <a href="../TelaCadastro/TelaCadastro.html">
+        <a href="../TelaCadastro/TelaCadastro.html" style="text-decoration: none;">
           <p id="cadastre-se">CADASTRE-SE</p>
         </a>
       </form>
