link para pagina do perfil

--- a/PaginaPrincipal/PaginaPrincipal.html
+++ b/PaginaPrincipal/PaginaPrincipal.html
@@ -49,7 +49,7 @@
 
             <div class="menuLateral" id="menuLateral">
                 <img src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px">
-                <p> Olá, usuário </p>
+                <p> Olá, <a href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">usuário </p></a>
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados Pessoais </a></li>
                   <li class="list-group-item"><a href="../CadastroItens/Educacao.html"> Educação </a></li>
