Conexao quase pronta, so esta dando erro 500 quando tenta enviar para o banco de dados

--- a/TelaCadastro/TelaCadastro.html
+++ b/TelaCadastro/TelaCadastro.html
@@ -75,7 +75,7 @@
           <div class="invalid-feedback" id="confirmar-senha-feedback">As senhas nao coincidem.</div>
         </div>
 
-        <button type="button" onclick="validarCadastro()" id="botao">CADASTRAR</button>
+        <button type="submit" onclick="validarCadastro()" id="botao">CADASTRAR</button>
       </form>
     </div>
   </div>
