--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -103,117 +103,84 @@
                         <li class="list-group-item"><a href="../CadastroItens/Outros.html"> + </a></li>
                     </ul>
                 </div>
+
+
             </nav>
 
-            <div class="col">
-                <!--CRIANDO O CARD DE CADASTRO-->
-                <div class="containerCard">
-                    <p class="itens-cadastrados"> ITENS CADASTRADOS</p>
-                    <h2>CUIDADOS PESSOAIS</h2>
 
-                    <div class="form-group row mb-3">
-                        <div id='coluna-produto' class="col-sm-6">
-                            <label for="produto" class="col-form-label">PRODUTO</label>
-                            <input type="text" class="form-control" id="produto" name="produto" disabled>
-                            <input type="text" class="form-control" id="produto" name="produto" disabled>
-                            <input type="text" class="form-control" id="produto" name="produto" disabled>
-                            <input type="text" class="form-control" id="produto" name="produto" disabled>
-                            <input type="text" class="form-control" id="produto" name="produto" disabled>
-                            <input type="text" class="form-control" id="produto" name="produto" disabled>
-                            <input type="text" class="form-control" id="produto" name="produto" disabled>
-                            <input type="text" class="form-control" id="produto" name="produto" disabled>
-                        </div>
 
-                        <div id='coluna-data' class="col-sm-3">
-                            <label for="data" class="col-form-label">DATA</label>
-                            <input type="text" class="form-control" id="data" name="data" disabled>
-                            <input type="text" class="form-control" id="data" name="data" disabled>
-                            <input type="text" class="form-control" id="data" name="data" disabled>
-                            <input type="text" class="form-control" id="data" name="data" disabled>
-                            <input type="text" class="form-control" id="data" name="data" disabled>
-                            <input type="text" class="form-control" id="data" name="data" disabled>
-                            <input type="text" class="form-control" id="data" name="data" disabled>
-                            <input type="text" class="form-control" id="data" name="data" disabled>
-                            <label for="valor-total" class="col-form-label"
-                                style="font-weight: bold; font-size: large; margin-left: 27%; margin-top: 12%; font-family: Arial, Helvetica, sans-serif;">VALOR
-                                TOTAL</label>
-                        </div>
 
-                        <div class="col-sm-3">
-                            <label for="valor" class="col-form-label">VALOR</label>
-                            <div class="d-flex">
-                                <input type="text" class="form-control" id="valor" name="valor" disabled>
-                                <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao"
-                                    style="display: none;" disabled>
-                                <button class="botao-mais-descricao"><i id="icon-mais-descricao"
-                                        class="bi bi-plus-circle"></i></button>
-                            </div>
-                            <div class="d-flex">
-                                <input type="text" class="form-control" id="valor" name="valor" disabled>
-                                <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao"
-                                    style="display: none;" disabled>
-                                <button class="botao-mais-descricao"><i id="icon-mais-descricao"
-                                        class="bi bi-plus-circle"></i></button>
-                            </div>
-                            <div class="d-flex">
-                                <input type="text" class="form-control" id="valor" name="valor" disabled>
-                                <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao"
-                                    style="display: none;" disabled>
-                                <button class="botao-mais-descricao"><i id="icon-mais-descricao"
-                                        class="bi bi-plus-circle"></i></button>
-                            </div>
-                            <div class="d-flex">
-                                <input type="text" class="form-control" id="valor" name="valor" disabled>
-                                <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao"
-                                    style="display: none;" disabled>
-                                <button class="botao-mais-descricao"><i id="icon-mais-descricao"
-                                        class="bi bi-plus-circle"></i></button>
-                            </div>
-                            <div class="d-flex">
-                                <input type="text" class="form-control" id="valor" name="valor" disabled>
-                                <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao"
-                                    style="display: none;" disabled>
-                                <button class="botao-mais-descricao"><i id="icon-mais-descricao"
-                                        class="bi bi-plus-circle"></i></button>
-                            </div>
-                            <div class="d-flex">
-                                <input type="text" class="form-control" id="valor" name="valor" disabled>
-                                <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao"
-                                    style="display: none;" disabled>
-                                <button class="botao-mais-descricao"><i id="icon-mais-descricao"
-                                        class="bi bi-plus-circle"></i></button>
-                            </div>
-                            <div class="d-flex">
-                                <input type="text" class="form-control" id="valor" name="valor" disabled>
-                                <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao"
-                                    style="display: none;" disabled>
-                                <button class="botao-mais-descricao"><i id="icon-mais-descricao"
-                                        class="bi bi-plus-circle"></i></button>
-                            </div>
-                            <div class="d-flex">
-                                <input type="text" class="form-control" id="valor" name="valor" disabled>
-                                <input type="text" class="form-control caixa-input" id="caixa-input" name="descricao"
-                                    style="display: none;" disabled>
-                                <button class="botao-mais-descricao"><i id="icon-mais-descricao"
-                                        class="bi bi-plus-circle"></i></button>
-                            </div>
-                            <div class="d-flex">
-                                <input type="text" class="form-control" id="valor-total" name="valor-total"
-                                    style="background-color: #A3C977; width: 72%;" disabled>
-                            </div>
+        </div>
+        <div class="container ">
+            <div class="row ">
+                <div class="col ">
+                    <div class="containerCard">
+                        <p class="itens-cadastrados"> ITENS CADASTRADOS</p>
+                        <h2>CUIDADOS PESSOAIS</h2>
+
+                        <div class="table-responsive">
+                            <table class="table sem-espacamento">
+                                <thead>
+                                    <tr class="text-center">
+                                        <th scope="col">PRODUTO</th>
+                                        <th scope="col">DATA</th>
+                                        <th scope="col">VALOR</th>
+                                        <th scope="col">DESC</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td class="text-center">
+                                            <div class="d-flex justify-content-center align-items-center">
+                                                <button class="botao-mais-descricao"><i id="icon-mais-descricao"
+                                                        class="bi bi-plus-circle"></i></button>
+                                        </td>
                         </div>
+                        </tr>
+                        <tr>
+                            <td><input type="text" class="form-control" disabled></td>
+                            <td><input type="text" class="form-control" disabled></td>
+                            <td><input type="text" class="form-control" disabled></td>
+                            <td class="text-center">
+                                <div class="d-flex justify-content-center align-items-center">
+                                    <button class="botao-mais-descricao"><i id="icon-mais-descricao"
+                                            class="bi bi-plus-circle"></i></button>
+                            </td>
                     </div>
+                    </tr>
+                    <tr>
+                        <td><input type="text" class="form-control" disabled></td>
+                        <td><input type="text" class="form-control" disabled></td>
+                        <td><input type="text" class="form-control" disabled></td>
+                        <td class="text-center">
+                            <div class="d-flex justify-content-center align-items-center">
+                                <button class="botao-mais-descricao"><i id="icon-mais-descricao"
+                                        class="bi bi-plus-circle"></i></button>
+                        </td>
 
-                    <!--FAZER O PAGINATION ACONTECER!!!-->
-                    <div class="pagination-controls d-flex justify-content-center align-items-center">
-                        <i class="bi bi-dash-circle" style="font-size: 20px; margin-right: 10px;"></i>
-                        <p class="page-number align-self-center mx-2" style="font-size: 20px; padding-top: 10px;">4</p>
-                        <i class="bi bi-plus-circle" style="font-size: 20px; margin-left: 10px;"></i>
-                    </div>
                 </div>
+                </tr>
+                <!-- Adicione mais linhas conforme necessário -->
+                </tbody>
+                </table>
+            </div>
+
+            <!-- FAZER O PAGINATION ACONTECER!!! -->
+            <div class="pagination-controls d-flex justify-content-center align-items-center">
+                <i class="bi bi-dash-circle" style="font-size: 20px; margin-right: 10px;"></i>
+                <p class="page-number align-self-center mx-2" style="font-size: 20px; padding-top: 10px;">4</p>
+                <i class="bi bi-plus-circle" style="font-size: 20px; margin-left: 10px;"></i>
             </div>
         </div>
+        </div>
+        </div>
+        </div>
     </main>
+
+
 
     <!--RODAPÉ-->
     <footer id='rodape' class="text-center text-lg-start">
