--- a/CadastroItens/Educacao.html
+++ b/CadastroItens/Educacao.html
@@ -19,13 +19,13 @@
       <nav class="col">
         <div class="corMenu">
           <div class="menu-toggle">
-            <a href="../PaginaInicial/PaginaInicial.html"><img class="menu-toggle-img" src="../Imagens/2-cortada.png"
-                alt="Logo da Cash Control" style="height: 60px"></a>
+            <a href="../PaginaPrincipal/PaginaPrincipal.html"><img class="menu-toggle-img"
+                src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 60px"></a>
             <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"
               style="margin-left: 250px; color: #ffffff; border: none;"> MENU </button>
             <ul class="dropdown-menu">
               <li class="list-group-item"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados Pessoais </a></li>
-              <li class="list-group-item"><a href="Educacao.html"> Educação </a></li>
+              <li class="list-group-item"><a href="../CadastroItens/Educacao.html"> Educação </a></li>
               <li class="list-group-item"><a href="../CadastroItens/Financiamento.html"> Financiamento </a></li>
               <li class="list-group-item"><a href="../CadastroItens/Imposto.html"> Imposto </a></li>
               <li class="list-group-item"><a href="../CadastroItens/Lazer.html"> Lazer </a></li>
@@ -34,7 +34,7 @@
               <div class="dropdown">
                 <li class="list-group-item"><a> Mercado </a></li>
                 <ul class="dropdown-menu">
-                  <li class="list-group-item"><a href="../CadastroItens/Alimentos.html"> Alimentos </a></li>
+                  <li class="list-group-item"><a href="Alimentos.html"> Alimentos </a></li>
                   <li class="list-group-item"><a href="../CadastroItens/Bebidas.html"> Bebidas </a></li>
                   <li class="list-group-item"><a href="../CadastroItens/Higiene.html"> Higiene </a></li>
                   <li class="list-group-item"><a href="../CadastroItens/Limpeza.html"> Limpeza </a></li>
@@ -54,11 +54,12 @@
         </div>
 
         <div class="menuLateral" id="menuLateral">
-          <img src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px">
+          <a href="../PaginaPrincipal/PaginaPrincipal.html"><img class="menu-toggle-img"
+            src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px"></a>
           <p> Olá, <a href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">usuário </p></a>
           <ul class="list-group list-group-flush">
             <li class="list-group-item"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados Pessoais </a></li>
-            <li class="list-group-item"><a href="Educacao.html"> Educação </a></li>
+            <li class="list-group-item"><a href="../CadastroItens/Educacao.html"> Educação </a></li>
             <li class="list-group-item"><a href="../CadastroItens/Financiamento.html"> Financiamento </a></li>
             <li class="list-group-item"><a href="../CadastroItens/Imposto.html"> Imposto </a></li>
             <li class="list-group-item"><a href="../CadastroItens/Lazer.html"> Lazer </a></li>
@@ -67,7 +68,7 @@
             <div class="dropdown">
               <li class="list-group-item"><a> Mercado </a></li>
               <ul class="dropdown-menu">
-                <li class="list-group-item"><a href="../CadastroItens/Alimentos.html"> Alimentos </a></li>
+                <li class="list-group-item"><a href="Alimentos.html"> Alimentos </a></li>
                 <li class="list-group-item"><a href="../CadastroItens/Bebidas.html"> Bebidas </a></li>
                 <li class="list-group-item"><a href="../CadastroItens/Higiene.html"> Higiene </a></li>
                 <li class="list-group-item"><a href="../CadastroItens/Limpeza.html"> Limpeza </a></li>
