--- a/CadastroItens/Alimentos.html
+++ b/CadastroItens/Alimentos.html
@@ -19,8 +19,8 @@
       <nav class="col">
         <div class="corMenu">
           <div class="menu-toggle">
-            <a href="../PaginaInicial/PaginaInicial.html"><img class="menu-toggle-img" src="../Imagens/2-cortada.png"
-                alt="Logo da Cash Control" style="height: 60px"></a>
+            <a href="../PaginaPrincipal/PaginaPrincipal.html"><img class="menu-toggle-img"
+                src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 60px"></a>
             <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"
               style="margin-left: 250px; color: #ffffff; border: none;"> MENU </button>
             <ul class="dropdown-menu">
@@ -54,7 +54,8 @@
         </div>
 
         <div class="menuLateral" id="menuLateral">
-          <img src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px">
+          <a href="../PaginaPrincipal/PaginaPrincipal.html"><img class="menu-toggle-img"
+            src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px"></a>
           <p> Olá, <a href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">usuário </p></a>
           <ul class="list-group list-group-flush">
             <li class="list-group-item"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados Pessoais </a></li>
