--- a/CadastroItens/Outros.html
+++ b/CadastroItens/Outros.html
@@ -19,8 +19,8 @@
       <nav class="col">
         <div class="corMenu">
           <div class="menu-toggle">
-            <a href="../PaginaInicial/PaginaInicial.html"><img class="menu-toggle-img" src="../Imagens/2-cortada.png"
-                alt="Logo da Cash Control" style="height: 60px"></a>
+            <a href="../PaginaPrincipal/PaginaPrincipal.html"><img class="menu-toggle-img"
+                src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 60px"></a>
             <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false"
               style="margin-left: 250px; color: #ffffff; border: none;"> MENU </button>
             <ul class="dropdown-menu">
@@ -34,7 +34,7 @@
               <div class="dropdown">
                 <li class="list-group-item"><a> Mercado </a></li>
                 <ul class="dropdown-menu">
-                  <li class="list-group-item"><a href="../CadastroItens/Alimentos.html"> Alimentos </a></li>
+                  <li class="list-group-item"><a href="Alimentos.html"> Alimentos </a></li>
                   <li class="list-group-item"><a href="../CadastroItens/Bebidas.html"> Bebidas </a></li>
                   <li class="list-group-item"><a href="../CadastroItens/Higiene.html"> Higiene </a></li>
                   <li class="list-group-item"><a href="../CadastroItens/Limpeza.html"> Limpeza </a></li>
@@ -48,13 +48,14 @@
               <li class="list-group-item"><a href="../CadastroItens/Saude.html"> Saúde </a></li>
               <li class="list-group-item"><a href="../CadastroItens/Transporte.html"> Transporte </a></li>
               <li class="list-group-item"><a href="../CadastroItens/Vestuario.html"> Vestuário </a></li>
-              <li class="list-group-item"><a href="Outros.html"> + </a></li>
+              <li class="list-group-item"><a href="../CadastroItens/Outros.html"> + </a></li>
             </ul>
           </div>
         </div>
 
         <div class="menuLateral" id="menuLateral">
-          <img src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px">
+          <a href="../PaginaPrincipal/PaginaPrincipal.html"><img class="menu-toggle-img"
+            src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px"></a>
           <p> Olá, <a href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">usuário </p></a>
           <ul class="list-group list-group-flush">
             <li class="list-group-item"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados Pessoais </a></li>
@@ -67,7 +68,7 @@
             <div class="dropdown">
               <li class="list-group-item"><a> Mercado </a></li>
               <ul class="dropdown-menu">
-                <li class="list-group-item"><a href="../CadastroItens/Alimentos.html"> Alimentos </a></li>
+                <li class="list-group-item"><a href="Alimentos.html"> Alimentos </a></li>
                 <li class="list-group-item"><a href="../CadastroItens/Bebidas.html"> Bebidas </a></li>
                 <li class="list-group-item"><a href="../CadastroItens/Higiene.html"> Higiene </a></li>
                 <li class="list-group-item"><a href="../CadastroItens/Limpeza.html"> Limpeza </a></li>
@@ -82,7 +83,7 @@
             <li class="list-group-item"><a href="../CadastroItens/Saude.html"> Saúde </a></li>
             <li class="list-group-item"><a href="../CadastroItens/Transporte.html"> Transporte </a></li>
             <li class="list-group-item"><a href="../CadastroItens/Vestuario.html"> Vestuário </a></li>
-            <li class="list-group-item"><a href="Outros.html"> + </a></li>
+            <li class="list-group-item"><a href="../CadastroItens/Outros.html"> + </a></li>
           </ul>
         </div>
       </nav>
