--- a/TelaCadastro/TelaCadastro.html
+++ b/TelaCadastro/TelaCadastro.html
@@ -54,14 +54,6 @@
         </div>
 
         <div>
-          <label for="data">DATA DE NASCIMENTO</label>
-          <input type="date" id="data" class="form-control" name="data" required>
-          <div class="valid-feedback"></div>
-          <div class="invalid-feedback">Preencha o campo.</div>
-        </div>
-
-
-        <div>
           <label for="senha">SENHA</label>
           <input type="password" id="senha" class="form-control" name="senha" required>
           <div class="valid-feedback"></div>
@@ -75,7 +67,7 @@
           <div class="invalid-feedback" id="confirmar-senha-feedback">As senhas nao coincidem.</div>
         </div>
 
-        <button type="submit" onclick="validarCadastro()" id="botao">CADASTRAR</button>
+        <button type="submit" id="botao">CADASTRAR</button>
       </form>
     </div>
   </div>
