--- a/ItensCadastrados/ItensCadastrados.html
+++ b/ItensCadastrados/ItensCadastrados.html
@@ -24,7 +24,7 @@
                         <a href="../PaginaPrincipal/PaginaPrincipal.html"><img class="menu-toggle-img"
                                 src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 60px"></a>
                         <button class="btn dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                            aria-expanded="false" style="margin-left: 250px; color: #ffffff; border: none;"> MENU
+                            aria-expanded="false" style="color: #ffffff; border: none;"> MENU
                         </button>
                         <ul class="dropdown-menu">
                             <li class="list-group-item"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados
@@ -37,9 +37,9 @@
                             <li class="list-group-item"><a href="../CadastroItens/Imposto.html"> Imposto </a></li>
                             <li class="list-group-item"><a href="../CadastroItens/Lazer.html"> Lazer </a></li>
 
-                            <!-- dropdown / submenu -->
+
                             <div class="dropdown">
-                                <li class="list-group-item"><a> Mercado </a></li>
+                                <li class="list-group-item"><a href=""> Mercado </a></li>
                                 <ul class="dropdown-menu">
                                     <li class="list-group-item"><a href="Alimentos.html"> Alimentos </a></li>
                                     <li class="list-group-item"><a href="../CadastroItens/Bebidas.html"> Bebidas </a>
@@ -79,7 +79,7 @@
                         <li class="list-group-item"><a href="../CadastroItens/Imposto.html"> Imposto </a></li>
                         <li class="list-group-item"><a href="../CadastroItens/Lazer.html"> Lazer </a></li>
 
-                        <!-- dropdown / submenu -->
+
                         <div class="dropdown">
                             <li class="list-group-item"><a> Mercado </a></li>
                             <ul class="dropdown-menu">
@@ -111,12 +111,15 @@
 
 
         </div>
-        <div class="container ">
+
+
+
+        <div class="container">
             <div class="row ">
                 <div class="col ">
                     <div class="containerCard">
-                        <p class="itens-cadastrados"> ITENS CADASTRADOS</p>
-                        <h2>CUIDADOS PESSOAIS</h2>
+                        <p class="itens-cadastrados"> Itens Cadastrados</p>
+                        <h2>LANÇAMENTOS</h2>
 
                         <div class="table-responsive">
                             <table class="table sem-espacamento">
@@ -128,55 +131,218 @@
                                         <th scope="col">DESC</th>
                                     </tr>
                                 </thead>
-                                <tbody>
+                                <tbody id="tabelaCorpo">
                                     <tr>
                                         <td><input type="text" class="form-control" disabled></td>
                                         <td><input type="text" class="form-control" disabled></td>
                                         <td><input type="text" class="form-control" disabled></td>
-                                        <td class="text-center">
-                                            <div class="d-flex justify-content-center align-items-center">
-                                                <button class="botao-mais-descricao"><i id="icon-mais-descricao"
-                                                        class="bi bi-plus-circle"></i></button>
-                                        </td>
+                                        <div class="dropdown">
+                                            <td class="text-center">
+                                                <div class="d-flex justify-content-center align-items-center">
+                                                    <button class="botao-mais-descricao" data-bs-toggle="dropdown"><i
+                                                            id="icon-mais-descricao" class="bi bi-plus-circle"></i>
+                                                    </button>
+                                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                        <li>
+
+                                                        </li>
+                                                    </ul>
+                                            </td>
+                                        </div>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <div class="dropdown">
+                                            <td class="text-center">
+                                                <div class="d-flex justify-content-center align-items-center">
+                                                    <button class="botao-mais-descricao" data-bs-toggle="dropdown"><i
+                                                            id="icon-mais-descricao" class="bi bi-plus-circle"></i>
+                                                    </button>
+                                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                        <li>
+
+                                                        </li>
+                                                    </ul>
+                                            </td>
+                                        </div>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <div class="dropdown">
+                                            <td class="text-center">
+                                                <div class="d-flex justify-content-center align-items-center">
+                                                    <button class="botao-mais-descricao" data-bs-toggle="dropdown"><i
+                                                            id="icon-mais-descricao" class="bi bi-plus-circle"></i>
+                                                    </button>
+                                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                        <li>
+
+                                                        </li>
+                                                    </ul>
+                                            </td>
+                                        </div>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <div class="dropdown">
+                                            <td class="text-center">
+                                                <div class="d-flex justify-content-center align-items-center">
+                                                    <button class="botao-mais-descricao" data-bs-toggle="dropdown"><i
+                                                            id="icon-mais-descricao" class="bi bi-plus-circle"></i>
+                                                    </button>
+                                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                        <li>
+
+                                                        </li>
+                                                    </ul>
+                                            </td>
+                                        </div>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <div class="dropdown">
+                                            <td class="text-center">
+                                                <div class="d-flex justify-content-center align-items-center">
+                                                    <button class="botao-mais-descricao" data-bs-toggle="dropdown"><i
+                                                            id="icon-mais-descricao" class="bi bi-plus-circle"></i>
+                                                    </button>
+                                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                        <li>
+
+                                                        </li>
+                                                    </ul>
+                                            </td>
+                                        </div>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <div class="dropdown">
+                                            <td class="text-center">
+                                                <div class="d-flex justify-content-center align-items-center">
+                                                    <button class="botao-mais-descricao" data-bs-toggle="dropdown"><i
+                                                            id="icon-mais-descricao" class="bi bi-plus-circle"></i>
+                                                    </button>
+                                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                        <li>
+
+                                                        </li>
+                                                    </ul>
+                                            </td>
+                                        </div>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <div class="dropdown">
+                                            <td class="text-center">
+                                                <div class="d-flex justify-content-center align-items-center">
+                                                    <button class="botao-mais-descricao" data-bs-toggle="dropdown"><i
+                                                            id="icon-mais-descricao" class="bi bi-plus-circle"></i>
+                                                    </button>
+                                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                        <li>
+
+                                                        </li>
+                                                    </ul>
+                                            </td>
+                                        </div>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <div class="dropdown">
+                                            <td class="text-center">
+                                                <div class="d-flex justify-content-center align-items-center">
+                                                    <button class="botao-mais-descricao" data-bs-toggle="dropdown"><i
+                                                            id="icon-mais-descricao" class="bi bi-plus-circle"></i>
+                                                    </button>
+                                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                        <li>
+
+                                                        </li>
+                                                    </ul>
+                                            </td>
+                                        </div>
+                                    </tr>
+                                    <tr>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <div class="dropdown">
+                                            <td class="text-center">
+                                                <div class="d-flex justify-content-center align-items-center">
+                                                    <button class="botao-mais-descricao" data-bs-toggle="dropdown"><i
+                                                            id="icon-mais-descricao" class="bi bi-plus-circle"></i>
+                                                    </button>
+                                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                        <li>
+
+                                                        </li>
+                                                    </ul>
+                                            </td>
+                                        </div>
+                                    </tr>
+
+
+
+                                    <tr>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <td><input type="text" class="form-control" disabled></td>
+                                        <div class="dropdown">
+                                            <td class="text-center">
+                                                <div class="d-flex justify-content-center align-items-center">
+                                                    <button class="botao-mais-descricao" data-bs-toggle="dropdown"><i
+                                                            id="icon-mais-descricao" class="bi bi-plus-circle"></i>
+                                                    </button>
+                                                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                                        <li>
+
+                                                        </li>
+                                                    </ul>
+                                            </td>
+                                        </div>
+                                    </tr>
+
+
+
+
+
+
+
+                                </tbody>
+                            </table>
                         </div>
-                        </tr>
-                        <tr>
-                            <td><input type="text" class="form-control" disabled></td>
-                            <td><input type="text" class="form-control" disabled></td>
-                            <td><input type="text" class="form-control" disabled></td>
-                            <td class="text-center">
-                                <div class="d-flex justify-content-center align-items-center">
-                                    <button class="botao-mais-descricao"><i id="icon-mais-descricao"
-                                            class="bi bi-plus-circle"></i></button>
-                            </td>
+
+
+
+                        <!-- FAZER O PAGINATION ACONTECER!!! -->
+                        <div class="pagination-controls d-flex justify-content-center align-items-center">
+                            <a href="#" id="prev-page" class="prev-page">
+                                <i class="bi bi-dash-circle green-icon"
+                                    style="font-size: 20px; margin-right: 10px;"></i>
+                            </a>
+                            <p id="page-number" class="page-number align-self-center mx-2"
+                                style="font-size: 20px; padding-top: 10px;">1</p>
+                            <a href="#" id="next-page" class="next-page">
+                                <i class="bi bi-plus-circle green-icon" style="font-size: 20px; margin-left: 10px;"></i>
+                            </a>
+                        </div>
                     </div>
-                    </tr>
-                    <tr>
-                        <td><input type="text" class="form-control" disabled></td>
-                        <td><input type="text" class="form-control" disabled></td>
-                        <td><input type="text" class="form-control" disabled></td>
-                        <td class="text-center">
-                            <div class="d-flex justify-content-center align-items-center">
-                                <button class="botao-mais-descricao"><i id="icon-mais-descricao"
-                                        class="bi bi-plus-circle"></i></button>
-                        </td>
-
                 </div>
-                </tr>
-                <!-- Adicione mais linhas conforme necessário -->
-                </tbody>
-                </table>
             </div>
-
-            <!-- FAZER O PAGINATION ACONTECER!!! -->
-            <div class="pagination-controls d-flex justify-content-center align-items-center">
-                <i class="bi bi-dash-circle" style="font-size: 20px; margin-right: 10px;"></i>
-                <p class="page-number align-self-center mx-2" style="font-size: 20px; padding-top: 10px;">4</p>
-                <i class="bi bi-plus-circle" style="font-size: 20px; margin-left: 10px;"></i>
-            </div>
-        </div>
-        </div>
-        </div>
         </div>
     </main>
 
