--- a/TelaCadastro/TelaCadastro.html
+++ b/TelaCadastro/TelaCadastro.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="../Logos/2-cortada.png" type="image/x-icon" />
   <link rel="stylesheet" href="TelaCadastro.css">
   <script src="TelaCadastro.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
