--- a/TelaLogin/TelaLogin.html
+++ b/TelaLogin/TelaLogin.html
@@ -8,6 +8,7 @@
   <link rel="shortcut icon" href="../Logos/2-cortada.png" type="image/x-icon" />
   <link rel="stylesheet" href="TelaLogin.css">
   <script src="TelaLogin.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -26,14 +27,14 @@
           <label for="email">E-MAIL</label>
           <input type="email" id="email" class="form-control" name="email" required>
           <div class="valid-feedback"></div>
-          <div class="invalid-feedback">Preencha o campo.</div>
+          <div class="invalid-feedback" id="email-feedback">Preencha o campo.</div>
         </div>
 
         <div>
           <label for="senha">SENHA</label>
           <input type="password" id="senha" class="form-control" name="senha" required>
           <div class="valid-feedback"></div>
-          <div class="invalid-feedback">Preencha o campo.</div>
+          <div class="invalid-feedback" id="senha-feedback">Preencha o campo.</div>
         </div>
 
         <button type="button" id="botao" onclick="validarLogin()">ENTRAR</button>
@@ -49,6 +50,8 @@
   <footer id='rodape'>
     <h5 id='frase-impacto'>CONQUISTE O CONTROLE FINANCEIRO QUE VOCÊ MERECE!
   </footer>
+
+  
 </body>
 
 </html>
