--- a/PaginaPrincipal/PaginaPrincipal.html
+++ b/PaginaPrincipal/PaginaPrincipal.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="PaginaPrincipal.css">
+    <script src="PaginaPrincipal.js"></script>
 </head>
 
 <body>
@@ -56,7 +57,7 @@
 
             <div class="menuLateral" id="menuLateral">
                 <img src="../Imagens/2-cortada.png" alt="Logo da Cash Control" style="height: 70px">
-                <p> Olá, <a href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">usuário </p></a>
+                <p id="nome-usuario"> Olá, <a href="../PerfilUsuario/PerfilUsuario.html" id="link-usuario">uSuário</p>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item"><a href="../CadastroItens/CuidadosPessoais.html"> Cuidados Pessoais </a>
                     </li>
